# EyeCenterDetection

./: .gitignore  README.md
src/: CMakeLists.txt  EyeCenterAscend.cpp  EyeCenterAscend.h  EyeCenterAscendFit.cpp  EyeCenterAscendFit.h  EyeCenterAscendPaul.cpp  EyeCenterAscendPaul.h  EyeCenterEvolAlg.cpp  EyeCenterEvolAlg.h  EyeCenterNaive.cpp  EyeCenterNaive.h  Gradient.cpp  Gradient.h  Main.cpp  Utils.cpp  Utils.h  face_landmark_detection.cpp  face_landmark_detection.h
test/: build_movie.sh  cluster_test.py  evaluate.py  stitch.py
test/classifier/: Readme.md
test/results/: evaluate_results_ascend.csv  evaluate_results_ascendfit.csv  evaluate_results_evol.csv  evaluate_results_naive.csv  evaluate_results_paul.csv
